test fix bug top and bottom white space on phone screen

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
 }
 
 body {
+  width: 100%;
+  overflow-y: hidden;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
